# ment-flow

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: fig_rec_2d_compare.py  fig_rec_6d_1d.py  plot_diagram.py  plot_loss.py  plot_rec_2d_compare.py  plot_rec_6d_1d.py  run.sh  utils.py
analysis/sns_btf_simulation/: bunch_sns-btf_vt36a_normalized.npy
experiments/: callback.py  load.py  plotting.py  run.sh  setup.py  utils.py
experiments/2d_from_1d/: README.md  arguments.py  eval.ipynb  eval_flow.ipynb  eval_nn.ipynb  plotting.py  train.py  train_flow.ipynb  train_flow.py  train_flow_hdr.ipynb  train_hdr.ipynb  train_ment.ipynb  train_ment.py  train_ment_liwen.ipynb  train_nn.ipynb  train_nn.py  train_scan.sh  utils.py
experiments/4d_from_1d/: train_ment.ipynb
experiments/4d_from_2d/: plotting.py  train_flow.ipynb  train_ment.ipynb
experiments/config/: base.yaml  base_flow.yaml  base_ment.yaml  base_nn.yaml  rec_2d.yaml  rec_2d_flow.yaml  rec_2d_linear_flow.yaml  rec_2d_linear_ment.yaml  rec_2d_linear_nn.yaml  rec_2d_ment.yaml  rec_2d_nn.yaml  rec_2d_nonlinear_flow.yaml  rec_2d_nonlinear_ment.yaml  rec_2d_nonlinear_nn.yaml  rec_nd_1d_flow.yaml  rec_nd_1d_linear_flow.yaml  rec_nd_1d_linear_ment.yaml  rec_nd_1d_linear_nn.yaml  rec_nd_1d_ment.yaml  rec_nd_1d_nn.yaml  rec_nd_2d_flow.yaml  rec_nd_2d_ment.yaml  rec_nd_2d_nn.yaml
experiments/data/: plot_toy.ipynb
experiments/distribution/: convergence_to_gaussian_projections.ipynb  plot_2d.ipynb  plot_nd.ipynb
experiments/hist/: test_kde_hist.ipynb
experiments/histogram/: test_kde.ipynb
experiments/jacobian/: jacobian_00.ipynb
experiments/rec_2d/: README.md  plotting.py  setup.py
experiments/rec_nd_1d/: eval_flow.ipynb  eval_nn.ipynb  run.sh  run_gmm.sh  run_rings.sh  setup.py  train_flow.ipynb  train_flow.py  (+5 more)
mentflow/: __init__.py  analysis.py  core.py  diagnostics.py  entropy.py  lattice.py  loss.py  losses.py  ment.py  prior.py  sample.py  sim.py  train.py  transform.py  types_.py
paper/: main.bib  main.tex  supplementary.tex
(+105 files in other folders)
