[project]
name = "mentflow"
version = "0.0.3"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "torch",
    "tqdm",
    "zuko",
]

[project.optional-dependencies]
test = [
    "gitpython",
    "hydra-core",
    "matplotlib",
    "pandas",
    "pot",
    "proplot @ git+https://github.com/cvanelteren/proplot.git@v0.9.91",
    "psdist @ git+https://github.com/austin-hoover/psdist",
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mentflow"]

