[project]
name = "mentflow"
version = "0.0.3"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.0",
    "scipy==1.14.1",
    "scikit-image==0.24.0",
    "torch==2.5.1.post6",
    "tqdm==4.67.1",
    "zuko==1.3.1",
]

[project.optional-dependencies]
test = [
    "gitpython==3.1.43",
    "hydra-core==1.3.2",
    "matplotlib==3.10.0",
    "pandas==2.2.3",
    "pot==0.9.5",
    "proplot @ git+https://github.com/cvanelteren/proplot.git@v0.9.91",
    "psdist @ git+https://github.com/austin-hoover/psdist@4fb074555197a5f4c257e3559553baf027a4af16",    
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mentflow"]

