[project]
name = "mentflow"
version = "0.0.4"
requires-python = "==3.11.5"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-image==0.24.0",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "zuko==1.3.1",
]

[project.optional-dependencies]
experiments = [
    "gitpython==3.1.43",
    "hydra-core==1.3.2",
    "matplotlib==3.9.4",
    "pandas==2.2.3",
    "pot==0.9.5",
    "psdist==2.1.4",
    "ultraplot==1.50.2",
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mentflow"]

